[metadata]
name = uninhibited
summary = Dead simple event handling for Python 2/3; minus the straight jacket.
description-file = README.rst
home-page = https://github.com/akatrevorjay/uninhibited
author = Trevor Joynson
author_email = github@skywww.net
license = GPL
keywords = 
    event
    handler
    dispatch
    plugin
    observer
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
	Topic :: Software Development
	Topic :: Software Development :: Libraries

[files]
packages = 
    uninhibited

;[build_sphinx]
;source-dir = docs/
;build-dir = docs/_build
;all_files = 1

;[upload_sphinx]
;upload-dir = doc/_build/html
